; ModuleID = '/home/carl/AnghaBench/freebsd/sys/nlm/extr_nlm_prot_server.c_nlm_unlock_res_1_svc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/nlm/extr_nlm_prot_server.c_nlm_unlock_res_1_svc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.svc_req = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nlm_unlock_res_1_svc(i32* %0, i8* %1, %struct.svc_req* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.svc_req*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.svc_req* %2, %struct.svc_req** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @nlm_convert_to_nlm4_res(i32* %7, i32* %8)
  %10 = load i8*, i8** %5, align 8
  %11 = load %struct.svc_req*, %struct.svc_req** %6, align 8
  %12 = call i32 @nlm4_unlock_res_4_svc(i32* %7, i8* %10, %struct.svc_req* %11)
  ret i32 %12
}

declare dso_local i32 @nlm_convert_to_nlm4_res(i32*, i32*) #1

declare dso_local i32 @nlm4_unlock_res_4_svc(i32*, i8*, %struct.svc_req*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
